Freedom Sanbox Ant Deploy/src/objects/Assets_Liabilities__c.object
<CustomObject>
    <fields>
        <fullName>Acquired_Opened__c</fullName>
        <label>Acquired Opened</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Liability_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset/Liability Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets &amp; Liabiliites</relationshipLabel>
        <relationshipName>Assets_Liabiliites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Assets__c</fullName>
        <label>Business Assets</label>
        <picklist>
            <picklistValues>
                <fullName>Sole Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Company</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cash_Reserve_Needs__c</fullName>
        <label>Cash Reserve Needs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custodian__c</fullName>
        <label>Custodian</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Assets_Liabiliites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Networth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Networth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Deposits_with_Bank__c</fullName>
        <label>Fixed Deposits with Bank</label>
        <picklist>
            <picklistValues>
                <fullName>Current A/c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings A/c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Deposit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inserted_From_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inserted From Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mutual_Fund_Chart_Assets__c</fullName>
        <formula>HYPERLINK(&quot;http://in.finance.yahoo.com/q?s=&quot; &amp;  Mutual_Funds_Ticker_Symbol_Assets__c  &amp; &quot;&amp;t=1d&quot;, IMAGE(&quot;http://ichart.yahoo.com/t?s=&quot; &amp;  Mutual_Funds_Ticker_Symbol_Assets__c  , &quot;Ticker Image&quot;, 96,192) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mutual Fund Chart(Assets)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mutual_Fund_Price_chart_Finance__c</fullName>
        <formula>HYPERLINK(&quot;http://in.finance.yahoo.com/q?s=&quot; &amp;  Mutual_Fund_Ticker_symbol_Financial__c &amp; &quot;&amp;t=1d&quot;, IMAGE(&quot;http://ichart.yahoo.com/t?s=&quot; &amp;  Mutual_Fund_Ticker_symbol_Financial__c , &quot;Ticker Image&quot;, 96,192) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mutual Fund Price chart(Financial)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mutual_Fund_Ticker_symbol_Financial__c</fullName>
        <label>Mutual Fund Ticker symbol(Financial)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mutual_Funds_Ticker_Symbol_Assets__c</fullName>
        <label>Mutual Funds Ticker Symbol(Assets)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mutual_Funds_Type__c</fullName>
        <label>Mutual Funds Type</label>
        <picklist>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold ETF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mutual_Funds__c</fullName>
        <label>Mutual Funds</label>
        <picklist>
            <controllingField>Mutual_Funds_Type__c</controllingField>
            <picklistValues>
                <fullName>Equity - Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Large Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Mid Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Small Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Sectoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Ultra Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold ETF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Arbitrage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Asset Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Debt Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Equity Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Monthly Income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ownership_Attribute__c</fullName>
        <label>Ownership Attribute</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Assets__c</fullName>
        <label>Personal Assets</label>
        <picklist>
            <picklistValues>
                <fullName>Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewelry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Beneficiary__c</fullName>
        <label>Primary Beneficiary</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Estates_Assets__c</fullName>
        <label>Real Estates Assets</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental property</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Retirement_Accounts__c</fullName>
        <label>Retirement Accounts</label>
        <picklist>
            <picklistValues>
                <fullName>EPF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Beneficiary__c</fullName>
        <label>Secondary Beneficiary</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Price_Chart_Assets__c</fullName>
        <formula>HYPERLINK(&quot;http://in.finance.yahoo.com/q?s=&quot; &amp;  Ticker_Stock_Symbol_Assets__c  &amp; &quot;&amp;t=1d&quot;, IMAGE(&quot;http://ichart.yahoo.com/t?s=&quot; &amp;  Ticker_Stock_Symbol_Assets__c  , &quot;Ticker Image&quot;, 96,192) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Price Chart(Assets)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Price_Chart_Financial__c</fullName>
        <formula>HYPERLINK(&quot;http://in.finance.yahoo.com/q?s=&quot; &amp;  Ticker_Stock_Symbol_Financial__c  &amp; &quot;&amp;t=1d&quot;, IMAGE(&quot;http://ichart.yahoo.com/t?s=&quot; &amp;  Ticker_Stock_Symbol_Financial__c  , &quot;Ticker Image&quot;, 96,192) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Price Chart(Financial)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stocks__c</fullName>
        <label>Stocks</label>
        <picklist>
            <picklistValues>
                <fullName>Large Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Cap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ticker_Stock_Symbol_Assets__c</fullName>
        <label>Ticker/Stock Symbol(Assets)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticker_Stock_Symbol_Financial__c</fullName>
        <label>Ticker/Stock Symbol(Financial)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Balance_Liability__c</fullName>
        <label>Value Balance(Liability)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Balance_Use_Assets__c</fullName>
        <label>Value Balance(Use Assets)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>value_Balance_Financial__c</fullName>
        <label>value Balance(Financial)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Assets &amp; Liabilities</label>
    <nameField>
        <label>Asset/Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets &amp; Liabiliites</pluralLabel>
    <recordTypes>
        <fullName>Financial_Account</fullName>
        <active>true</active>
        <description>Financials</description>
        <label>Financial Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability</fullName>
        <active>true</active>
        <description>Liability</description>
        <label>Liability</label>
    </recordTypes>
    <recordTypes>
        <fullName>Use_Assets</fullName>
        <active>true</active>
        <description>Assets</description>
        <label>Use Assets</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>